[gd_scene load_steps=8 format=3 uid="uid://cjtvynn63jb2r"]

[ext_resource type="Script" uid="uid://c02mguuo4jocx" path="res://modules/ui/coping_overlays/selectable_body.gd" id="1_kf1ud"]
[ext_resource type="Material" uid="uid://bo62wxenemsxt" path="res://modules/entities/enemies/shades/fx/enemy_shader.tres" id="2_7v3qk"]
[ext_resource type="Shader" uid="uid://d0p05imkhnhst" path="res://modules/objects/stress_causer/stress_effect.gdshader" id="3_7v3qk"]
[ext_resource type="PackedScene" uid="uid://dtl2xvpka5wmn" path="res://modules/ui/input_button_overlays/pointer.tscn" id="4_6o6f5"]

[sub_resource type="Gradient" id="Gradient_vtdgj"]
resource_local_to_scene = true
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.7, 0, 0, 1, 0.99, 0, 0, 1, 0.435294, 0, 0, 1)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_27tcd"]
gradient = SubResource("Gradient_vtdgj")
width = 16
height = 16
fill_from = Vector2(0.25, 0.25)
fill_to = Vector2(0.75, 0.75)
repeat = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6o6f5"]
resource_local_to_scene = true
shader = ExtResource("3_7v3qk")
shader_parameter/height = 0.5
shader_parameter/width = 0.3
shader_parameter/fade = 0.0

[node name="SelectableBody" type="Node2D"]
process_mode = 3
z_as_relative = false
script = ExtResource("1_kf1ud")

[node name="Line2D" type="Line2D" parent="."]
visible = false
z_index = 4
texture_repeat = 2
material = ExtResource("2_7v3qk")
position = Vector2(0, -22)
points = PackedVector2Array(0, 0, 0, 0, 8, 4, 12, 12, 8, 20, 0, 24, -8, 20, -12, 12, -8, 4, 0, 0)
closed = true
width = 2.0
texture = SubResource("GradientTexture2D_27tcd")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="MouseDetector" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -10.0
offset_top = -18.0
offset_right = 10.0
offset_bottom = 2.0
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 3
z_index = 3
z_as_relative = false
material = SubResource("ShaderMaterial_6o6f5")
offset_left = -25.0
offset_top = -36.0
offset_right = 25.0
offset_bottom = 14.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Pointer" parent="." instance=ExtResource("4_6o6f5")]
visible = false
position = Vector2(0, -23)
rotation = 3.14159

[connection signal="mouse_entered" from="MouseDetector" to="." method="_on_control_mouse_entered"]
